--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
             box-sizing: border-box;
         }
         .container {
+            /* display: flex; */
+            position: relative;
             width: 100%;
             height: 100vh;
-            margin-top: 0;
+            /* margin-top: 0;
             margin-left: auto;
-            margin-right: auto;
+            margin-right: auto; */
             /* border: 3px solid black; */
         }
         .controls {
-            width: 90%;
+            /* width: 90%; */
             /* margin-top: 5%; */
-            margin-left: auto;
-            margin-right: auto;
+            /* margin-left: auto;
+            margin-right: auto; */
             /* border: 3px dotted red; */
             display: flex;
             justify-content:center;
         }
         .container img {
+            position: fixed;
+            left: 0;
+            /* bottom: 0; */
             object-fit: cover;
             /* object-fit: contain; */
             height: 100%;
