--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
             /* border: 3px dotted red; */
             display: flex;
             justify-content:center;
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            right: 10px;
         }
         .container img {
-            position: fixed;
-            left: 0;
-            /* bottom: 0; */
+            /* position: fixed; */
             object-fit: cover;
             /* object-fit: contain; */
             height: 100%;
